--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Jesús Martínez</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Jesús Martínez</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="Web Portfolio" />
+    <meta property="og:title" content="Jesús Martínez - Front-end Developer" />
+    <meta
+      property="og:description"
+      content="Ingeniero informático por la UPV, especializado en Ingeniería de Software. Apasionado del desarrollo web y las nuevas tecnologías."
+    />
+    <meta property="og:url" content="https://jemarhe.com/" />
+    <meta property="og:image" content="./assets/image/jemarhe.png" />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
